README includes Dockerfile